--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -12,6 +12,7 @@
 			<h:outputLabel value="User Age:" />
 			<h:inputText value="#{userBean.age}"/><br/>
 			<h:commandButton value="Submit" action="#{userBean.saveUser}"/>
+			<h:outputLabel value="Test" />
 		</h:form>
     </h:body>
 </html>
