--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -9,6 +9,8 @@
 		<h:form id="userForm">
 			<h:outputLabel value="User Name:" />
 			<h:inputText value="#{userBean.name}" /> <br />
+            <h:outputLabel value="Password:" />
+            <h:inputSecret value="#{userBean.password}" /> <br />
 			<h:commandButton value="Submit" action="#{userBean.saveUser}"/>
 		</h:form>
     </h:body>
